--- a/src/static/views/settings/index.html
+++ b/src/static/views/settings/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <hr class="mb-4">
                 <div class="custom-control custom-checkbox">
-                    <input class="custom-control-input" id="live" type="checkbox"<% if (settings.live) { %> checked<% } %>>
+                    <input class="custom-control-input" id="live" name="live" type="checkbox"<% if (settings.live) { %> checked<% } %>>
                     <label class="custom-control-label" for="live">Live reload</label>
                 </div>
                 <hr class="mb-4">
