--- a/src/static/views/settings/index.html
+++ b/src/static/views/settings/index.html
@@ -57,32 +57,38 @@
                     <hr class="mb-4">
                     <button class="btn btn-primary" type="submit">Save settings</button>
                 </form>
-                <form class="tab-pane fade" id="list-routes" role="tabpanel" aria-labelledby="list-routes-list">
+                <form class="tab-pane fade" id="list-routes" role="tabpanel" aria-labelledby="list-routes-list" action="/routes/install" method="post" enctype="multipart/form-data">
                     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                         <h1 class="h2">Routes</h1>
                     </div>
                     <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                            <button class="btn btn-success" disabled type="button">Install</button>
+                            <button class="btn btn-success" type="submit">Install</button>
                         </div>
                         <div class="custom-file">
-                            <input class="custom-file-input" id="inputGroupFile01" type="file">
+                            <input class="custom-file-input" id="inputGroupFile01" name="file" accept=".zip" type="file">
                             <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                         </div>
                     </div>
                     <ul class="list-group py-3">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            HTML
-                            <button type="button" class="btn btn-danger">Delete</button>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Smarty
-                            <button type="button" class="btn btn-danger">Delete</button>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            S3 Cacher
-                            <button type="button" class="btn btn-danger">Delete</button>
-                        </li>
+                        <% _.each(routes, function(value, key) { %>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <%- key %>
+                                <button type="button" class="btn btn-danger" data-route="<%- key %>">Delete</button>
+                            </li>
+                        <% }); %>
+                        <!--<li class="list-group-item d-flex justify-content-between align-items-center">-->
+                            <!--HTML-->
+                            <!--<button type="button" class="btn btn-danger">Delete</button>-->
+                        <!--</li>-->
+                        <!--<li class="list-group-item d-flex justify-content-between align-items-center">-->
+                            <!--Smarty-->
+                            <!--<button type="button" class="btn btn-danger">Delete</button>-->
+                        <!--</li>-->
+                        <!--<li class="list-group-item d-flex justify-content-between align-items-center">-->
+                            <!--S3 Cacher-->
+                            <!--<button type="button" class="btn btn-danger">Delete</button>-->
+                        <!--</li>-->
                     </ul>
                 </form>
                 <div class="tab-pane fade" id="list-plugins" role="tabpanel" aria-labelledby="list-plugins-list">
